# EvE

./: CMakeLists.txt  justfile
assets/scripts/: demo.lua  intro.lua  level.lua  main.lua  menu.lua  test.lua
assets/scripts/api/: engine_api.lua
include/: entity.hpp  ernest.hpp  game.hpp  player.hpp  world.hpp
include/assets/: manager.hpp
include/core/: game.hpp
include/ecs/: animation.hpp  audio.hpp  components.hpp  componentset.hpp  entity.hpp  manager.hpp  physics.hpp  types.hpp
include/renderer/: renderer.hpp
include/scene/: demo.hpp  lua.hpp  scene.hpp
src/: entity.cpp  ernest.cpp  game.cpp  main.cpp  player.cpp
src/assets/: manager.cpp
src/core/: game.cpp
src/ecs/: animation.cpp  audio.cpp  manager.cpp  physics.cpp
src/renderer/: renderer.cpp
src/scene/: demo.cpp  lua.cpp
